--- a/data/resources/plugins/packet_nautilus.py.in
+++ b/data/resources/plugins/packet_nautilus.py.in
@@ -23,7 +23,8 @@ def log(*vals: Any):
 # TODO: Maybe have a separate gettext package for plugin scripts that gets
 # copied over alongside the script. Seems more robust?
 def init_i18n() -> gettext.NullTranslations | gettext.GNUTranslations:
-    locale_dirs: List[Path | None] = [None]  # None for system default locale dir
+    # `None` is for system default locale dir
+    locale_dirs: List[Path | None] = [None, Path("@LOCALE_DIR@")]
     (lang, enc) = locale.getlocale()
 
     flatpak_info = None
